@@ -306,6 +306,15 @@ nuisance.name  = 'Nuisance';
 nuisance.val   = {c};
 nuisance.help  = {'Add a nuisance parameter to be removed from data'};
 
+slice = cfg_entry;
+slice.tag = 'slice';
+slice.name = 'Show slice (in mm)?';
+slice.strtype = 'r';
+slice.num = [1 1];
+slice.val  = {0};
+slice.help = {[...
+'Choose slice in mm.']};
+
 gap = cfg_entry;
 gap.tag = 'gap';
 gap.name = 'Separation';
@@ -329,7 +338,7 @@ transform.tag     = 'transform';
 transform.name    = 'Nuisance';
 transform.help    = {'This option allows for the specification of nuisance effects to be removed from the data. ',...
 'A potential nuisance parameter can be age. In this case the variance explained by age will be removed prior to ',...
-'the calculation of the covariance.'};
+'the calculation of the correlation.'};
 transform.values  = {nuisance};
 transform.num     = [0 Inf];
 
@@ -341,13 +350,13 @@ check_cov.prog   = @cg_check_cov;
 check_cov.help = {[...
 'If you have a reasonable sample size artefacts are easily overseen. In order to identify images with poor image quality ',...
 'or even artefacts you can use this function. Images have to be in the same orientation with same voxel size and dimension ',...
-'(e.g. normalized images). The idea of this tool is to check the covariance of all files across the sample.'],...
+'(e.g. normalized images). The idea of this tool is to check the correlation of all files across the sample.'],...
 '',[...
-'The covariance is calculated between all images and the mean for each image is plotted using a boxplot and the indicated ',...
-'filenames. The smaller the mean covariance the more deviant is this image from the sample mean. ',...
+'The correlation is calculated between all images and the mean for each image is plotted using a boxplot and the indicated ',...
+'filenames. The smaller the mean correlation the more deviant is this image from the sample mean. ',...
 'In the plot outliers from ',...
 'the sample are usually isolated from the majority of images which are clustered around the sample mean. The mean ',...
-'covariance is plotted at the y-axis and the x-axis reflects the image order. Images are plotted from left to right which is helpful if ',...
+'correlation is plotted at the y-axis and the x-axis reflects the image order. Images are plotted from left to right which is helpful if ',...
 'you have selected the images in the order of different sub-groups. Furthermore this is also useful for fMRI images which can be ',...
 'also used with this tool. The proportional scaling option should be only used if image intensity is not scaled (e.g. T1 images) ',...
 'or if images have to be scaled during statistical analysis (e.g. modulated images).']};
@@ -422,32 +431,21 @@ data_surf.ufilter = '[lr]h.[tgf][hyr][ira]';
 data_surf.num     = [1 Inf];
 data_surf.help = {'Select surfaces parameters files.'};
 
-measure      = cfg_menu;
-measure.name = 'Check covariance for';
-measure.tag  = 'measure';
-measure.labels = {'Surface parameters (e.g. thickness)','Surface coordinates (e.g. shape)'};
-measure.values = {1,2};
-measure.val    = {1};
-measure.help = {[...
-'Select parameter that is used to check covariance. You can use either surface parameter values ',...
-'that are later used for statistical analysis (e.g. thickness) or surface coordinates to check for ',...
-'deviating surface shape (after normalization).']};
-
 check_mesh_cov = cfg_exbranch;
 check_mesh_cov.tag = 'check_mesh_cov';
-check_mesh_cov.name = 'Check sample homogeneity using covariance';
-check_mesh_cov.val = {data_surf,measure};
-check_mesh_cov.prog   = @cg_check_mesh_cov;
+check_mesh_cov.name = 'Check homogeneity using sample correlation';
+check_mesh_cov.val = {data_surf,transform};
+check_mesh_cov.prog   = @cg_check_cov;
 check_mesh_cov.help = {[...
 'If you have a reasonable sample size artefacts are easily overseen. In order to identify surfaces with poor image quality ',...
 'or even artefacts you can use this function. Surfaces have to be resampled to the template space ',...
-'(e.g. normalized images). The idea of this tool is to check the covariance of all files across the sample.'],...
+'(e.g. normalized images). The idea of this tool is to check the correlation of all files across the sample.'],...
 '',[...
-'The covariance is calculated between all images and the mean for each image is plotted using a boxplot and the indicated ',...
-'filenames. The smaller the mean covariance the more deviant is this image from the sample mean. ',...
+'The correlation is calculated between all images and the mean for each image is plotted using a boxplot and the indicated ',...
+'filenames. The smaller the mean correlation the more deviant is this surface from the sample mean. ',...
 'In the plot outliers from ',...
 'the sample are usually isolated from the majority of images which are clustered around the sample mean. The mean ',...
-'covariance is plotted at the y-axis and the x-axis reflects the image order. Images are plotted from left to right which is helpful if ',...
+'correlation is plotted at the y-axis and the x-axis reflects the image order. Images are plotted from left to right which is helpful if ',...
 'you have selected the images in the order of different sub-groups.']};
 
 %------------------------------------------------------------------------
